fixed some sql statements and resultsets not being closed properly. made the amino acids in a msf file a singleton, the vector used to keep on growing.